--- a/package.json
+++ b/package.json
@@ -1,34 +1,31 @@
 {
-  "name": "agent-responsive-digital-twin",
-  "version": "1.0.0",
-  "description": "A demo showcasing Agent-Responsive Design principles through a digital twin interface",
+  "name": "backend",
+  "version": "0.1.0",
   "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
   "scripts": {
-    "dev": "npm-run-all --parallel dev:*",
-    "dev:frontend": "npm run dev --workspace=packages/frontend",
-    "dev:backend": "npm run dev --workspace=packages/backend",
-    "build": "npm-run-all --parallel build:*",
-    "build:frontend": "npm run build --workspace=packages/frontend",
-    "build:backend": "npm run build --workspace=packages/backend",
-    "start": "npm-run-all --parallel start:*",
-    "start:frontend": "npm run start --workspace=packages/frontend",
-    "start:backend": "npm run start --workspace=packages/backend",
-    "lint": "npm-run-all --parallel lint:*",
-    "lint:frontend": "npm run lint --workspace=packages/frontend",
-    "lint:backend": "npm run lint --workspace=packages/backend",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "lint": "eslint . --ext .ts",
+    "test": "jest",
+    "test:api": "ts-node test/api-test.ts"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.5",
-    "prettier": "^3.1.0"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  },
-  "author": "",
-  "license": "MIT"
+    "@types/cors": "^2.8.15",
+    "@types/express": "^4.17.20",
+    "@types/node": "^20.19.10",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.9.1",
+    "axios": "^1.6.0",
+    "eslint": "^8.53.0",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.9.2"
+  }
 }
-
