--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -19,10 +19,10 @@
     "@types/node": "^20.8.10",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
+    "axios": "^1.11.0",
     "eslint": "^8.53.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   }
 }
-
