--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --ext .ts"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.10.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2"
@@ -19,7 +20,6 @@
     "@types/node": "^20.8.10",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
-    "axios": "^1.11.0",
     "eslint": "^8.53.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
