--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -4,14 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npm run validate-client-imports && next build",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write .",
-    "check-types": "tsc --noEmit"
+    "check-types": "tsc --noEmit",
+    "validate-client-imports": "tsx lib/validateClientImports.ts"
   },
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.10.0",
     "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-slot": "^1.2.3",
     "axios": "^1.6.0",
@@ -40,6 +40,7 @@
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
     "tailwindcss": "^3.3.5",
+    "tsx": "^3.14.0",
     "typescript": "^5.2.2"
   }
 }
