Integrated AI Agent and built the semantic layer

--- a/packages/frontend/env.template
+++ b/packages/frontend/env.template
@@ -6,3 +6,9 @@ NEXT_PUBLIC_ENABLE_AI_FEATURES=true
 
 # External Services
 # NEXT_PUBLIC_ANALYTICS_ID=
+
+# AI Service Configuration
+ANTHROPIC_API_KEY=
+
+# Redis Configuration (for distributed rate limiting)
+REDIS_URL=redis://localhost:6379
