Updating reviewed files

--- a/packages/frontend/env.template
+++ b/packages/frontend/env.template
@@ -6,6 +6,7 @@ NEXT_PUBLIC_ENABLE_AI_FEATURES=true
 
 # External Services
 # NEXT_PUBLIC_ANALYTICS_ID=
+NEXT_PUBLIC_GITHUB_REPO_URL=https://github.com/your-org/your-repo
 
 # AI Service Configuration
 ANTHROPIC_API_KEY=
