Updating deployment files

--- a/packages/frontend/env.template
+++ b/packages/frontend/env.template
@@ -6,10 +6,12 @@ NEXT_PUBLIC_ENABLE_AI_FEATURES=true
 
 # External Services
 # NEXT_PUBLIC_ANALYTICS_ID=
-NEXT_PUBLIC_GITHUB_REPO_URL=https://github.com/your-org/your-repo
+NEXT_PUBLIC_GITHUB_REPO_URL=https://github.com/Suryaa-dsgn/agent-responsive-digital-twin.git
 
-# AI Service Configuration
-ANTHROPIC_API_KEY=
+# AI Service Configuration - Get API key from https://console.anthropic.com/
+ANTHROPIC_API_KEY=your_claude_api_key_here
 
 # Redis Configuration (for distributed rate limiting)
+# For local development, you can use Redis Cloud free tier: https://redis.com/try-free/
+# Or run Redis locally with Docker: docker run -p 6379:6379 redis
 REDIS_URL=redis://localhost:6379
