--- a/package.json
+++ b/package.json
@@ -1,20 +1,40 @@
 {
-  "name": "backend",
+  "name": "ai-agent-demo",
   "version": "0.1.0",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "build": "tsc",
-    "start": "node dist/server.js",
+    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
+    "dev:backend": "cd packages/backend && npm run dev",
+    "dev:frontend": "cd packages/frontend && npm run dev",
+    "build": "npm run build:backend && npm run build:frontend",
+    "build:backend": "cd packages/backend && npm run build",
+    "build:frontend": "cd packages/frontend && npm run build",
+    "start": "cd packages/frontend && npm run start",
     "lint": "eslint . --ext .ts",
     "test": "jest --detectOpenHandles",
-    "test:api": "ts-node test/api-test.ts"
+    "test:api": "ts-node test/api-test.ts",
+    "test:all": "npm run lint && npm run test && npm run test:api",
+    "test:e2e": "cd packages/frontend && npx playwright test",
+    "setup": "node setup-env.js",
+    "validate-env": "ts-node validate-env.ts",
+    "verify-deploy": "node scripts/verify-deployment.js",
+    "prepare-deploy": "npm run validate-env && npm run lint && npm run build",
+    "pre-deploy-test": "node scripts/pre-deploy-test.js",
+    "env-validate": "node scripts/environment-validation.js",
+    "postdeploy": "npm run verify-deploy",
+    "postinstall": "npm run setup"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "concurrently": "^8.2.2",
+    "axios": "^1.6.0",
+    "cross-env": "^7.0.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.15",
@@ -23,7 +43,6 @@
     "@types/node": "^20.19.10",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
-    "axios": "^1.6.0",
     "eslint": "^8.53.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
