--- a/package.json
+++ b/package.json
@@ -25,16 +25,16 @@
     "pre-deploy-test": "node scripts/pre-deploy-test.js",
     "env-validate": "node scripts/environment-validation.js",
     "postdeploy": "npm run verify-deploy",
-    "postinstall": "npm run setup"
+    "setup-if-allowed": "node -e \"process.env.SKIP_POSTINSTALL !== 'true' && require('child_process').execSync('npm run setup', {stdio: 'inherit'});\""
   },
   "dependencies": {
+    "axios": "^1.6.0",
+    "concurrently": "^8.2.2",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "zod": "^3.25.76",
-    "concurrently": "^8.2.2",
-    "axios": "^1.6.0",
-    "cross-env": "^7.0.3"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/cors": "^2.8.15",
