Pushing reviewed files

--- a/packages/frontend/env.template
+++ b/packages/frontend/env.template
@@ -6,7 +6,7 @@ NEXT_PUBLIC_ENABLE_AI_FEATURES=true
 
 # External Services
 # NEXT_PUBLIC_ANALYTICS_ID=
-NEXT_PUBLIC_GITHUB_REPO_URL=https://github.com/Suryaa-dsgn/agent-responsive-digital-twin.git
+NEXT_PUBLIC_GITHUB_REPO_URL=https://github.com/Suryaa-dsgn/agent-responsive-digital-twin
 
 # AI Service Configuration - Get API key from https://console.anthropic.com/
 ANTHROPIC_API_KEY=your_claude_api_key_here
