--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "readline-sync": "^1.4.10",
     "zod": "^3.25.76"
   },
   "devDependencies": {
@@ -41,6 +42,7 @@
     "@types/express": "^4.17.20",
     "@types/jest": "^29.5.5",
     "@types/node": "^20.19.10",
+    "@types/readline-sync": "^1.4.8",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
     "eslint": "^8.53.0",
